--- a/frontend/src/components/SpotDetail/SpotDetail.css
+++ b/frontend/src/components/SpotDetail/SpotDetail.css
@@ -12,6 +12,7 @@ h2 {
 .spot-detail {
     width: 80rem;
     line-height: 1.5rem;
+    margin-bottom: 3rem;
 }
 
 .spot-summary>span {
@@ -38,4 +39,9 @@ h2 {
     font-size: 1.1rem;
     font-weight: 400;
 
+}
+
+.spot-description h2 {
+    border-bottom: 0.08rem rgba(0, 0, 0, 0.1) solid;
+    padding-bottom: 1rem;
 }
